@@ -6,7 +6,7 @@ package com.mobi.etl.rest;
  * $Id:$
  * $HeadURL:$
  * %%
- * Copyright (C) 2016 - 2023 iNovex Information Systems, Inc.
+ * Copyright (C) 2016 - 2024 iNovex Information Systems, Inc.
  * %%
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Affero General Public License as published by
@@ -37,6 +37,9 @@ import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.reset;
 import static org.mockito.Mockito.when;
 
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.mobi.catalog.api.builder.Difference;
 import com.mobi.dataset.ontology.dataset.Dataset;
 import com.mobi.dataset.ontology.dataset.DatasetRecord;
@@ -55,9 +58,7 @@ import com.mobi.rdf.orm.OrmFactory;
 import com.mobi.rest.test.util.FormDataMultiPart;
 import com.mobi.rest.test.util.MobiRestTestCXF;
 import com.mobi.rest.test.util.UsernameTestFilter;
-import net.sf.json.JSONArray;
 import org.apache.commons.io.IOUtils;
-import org.apache.poi.openxml4j.exceptions.InvalidFormatException;
 import org.apache.poi.ss.usermodel.Cell;
 import org.apache.poi.ss.usermodel.DataFormatter;
 import org.apache.poi.ss.usermodel.FormulaEvaluator;
@@ -83,16 +84,16 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import javax.ws.rs.client.Entity;
 import javax.ws.rs.client.WebTarget;
@@ -101,6 +102,7 @@ import javax.ws.rs.core.Response;
 
 public class DelimitedRestTest extends MobiRestTestCXF {
     private AutoCloseable closeable;
+    private static final ObjectMapper mapper = new ObjectMapper();
     private User user;
     private static final String MAPPING_RECORD_IRI = "http://test.org/mapping-record";
     private static final String DATASET_RECORD_IRI = "http://test.org/dataset-record";
@@ -169,12 +171,12 @@ public class DelimitedRestTest extends MobiRestTestCXF {
         when(mappingManager.createMappingId(any(IRI.class))).thenAnswer(i -> new MappingId() {
             @Override
             public Optional<IRI> getMappingIRI() {
-                return null;
+                return Optional.empty();
             }
 
             @Override
             public Optional<IRI> getVersionIRI() {
-                return null;
+                return Optional.empty();
             }
 
             @Override
@@ -215,31 +217,31 @@ public class DelimitedRestTest extends MobiRestTestCXF {
             response = target().path("delimited-files").request().post(ent);
             String filename = response.readEntity(String.class);
 
-            assertEquals(response.getStatus(), 201);
+            assertEquals(201, response.getStatus());
             assertTrue(Files.exists(Paths.get(DelimitedRest.TEMP_DIR + "/" + filename)));
         }
     }
 
     @Test
     public void updateNonexistentDelimitedTest() throws Exception {
-        String fileName = UUID.randomUUID().toString() + ".csv";
+        String fileName = UUID.randomUUID() + ".csv";
         FormDataMultiPart fd = getFileFormData("test_updated.csv");
         Response response = target().path("delimited-files/" + fileName).request().put(Entity.entity(fd.body(),
                 MediaType.MULTIPART_FORM_DATA));
-        assertEquals(response.getStatus(), 200);
+        assertEquals(200, response.getStatus());
         assertTrue(Files.exists(Paths.get(DelimitedRest.TEMP_DIR + "/" + fileName)));
     }
 
     @Test
     public void updateDelimitedReplacesContentTest() throws Exception {
-        String fileName = UUID.randomUUID().toString() + ".csv";
+        String fileName = UUID.randomUUID() + ".csv";
         copyResourceToTemp("test.csv", fileName);
         List<String> expectedLines = getCsvResourceLines("test_updated.csv");
 
         FormDataMultiPart fd = getFileFormData("test_updated.csv");
         Response response = target().path("delimited-files/" + fileName).request().put(Entity.entity(fd.body(),
                 MediaType.MULTIPART_FORM_DATA));
-        assertEquals(response.getStatus(), 200);
+        assertEquals(200, response.getStatus());
         assertEquals(response.readEntity(String.class), fileName);
         List<String> resultLines = Files.readAllLines(Paths.get(DelimitedRest.TEMP_DIR + "/" + fileName));
         assertEquals(resultLines.size(), expectedLines.size());
@@ -250,64 +252,64 @@ public class DelimitedRestTest extends MobiRestTestCXF {
 
     @Test
     public void getRowsFromCsvWithDefaultsTest() throws Exception {
-        String fileName = UUID.randomUUID().toString() + ".csv";
+        String fileName = UUID.randomUUID() + ".csv";
         copyResourceToTemp("test.csv", fileName);
         List<String> expectedLines = getCsvResourceLines("test.csv");
         Response response = target().path("delimited-files/" + fileName).request().get();
-        assertEquals(response.getStatus(), 200);
+        assertEquals(200, response.getStatus());
         testResultsRows(response, expectedLines, 10);
     }
 
     @Test
     public void getRowsFromCsvWithParamsTest() throws Exception {
-        String fileName = UUID.randomUUID().toString() + ".csv";
+        String fileName = UUID.randomUUID() + ".csv";
         copyResourceToTemp("test_tabs.csv", fileName);
         List<String> expectedLines = getCsvResourceLines("test_tabs.csv");
 
         int rowNum = 5;
         Response response = target().path("delimited-files/" + fileName).queryParam("rowCount", rowNum)
                 .queryParam("separator", "\t").request().get();
-        assertEquals(response.getStatus(), 200);
+        assertEquals(200, response.getStatus());
         testResultsRows(response, expectedLines, rowNum);
     }
 
     @Test
     public void nonExistentRowsTest() {
         Response response = target().path("delimited-files/error").request().get();
-        assertEquals(response.getStatus(), 404);
+        assertEquals(404, response.getStatus());
     }
 
     @Test
     public void getRowsFromExcelWithDefaultsTest() throws Exception {
-        String fileName1 = UUID.randomUUID().toString() + ".xls";
+        String fileName1 = UUID.randomUUID() + ".xls";
         copyResourceToTemp("test.xls", fileName1);
         List<String> expectedLines = getExcelResourceLines("test.xls");
         Response response = target().path("delimited-files/" + fileName1).request().get();
-        assertEquals(response.getStatus(), 200);
+        assertEquals(200, response.getStatus());
         testResultsRows(response, expectedLines, 10);
 
-        String fileName2 = UUID.randomUUID().toString() + ".xlsx";
+        String fileName2 = UUID.randomUUID() + ".xlsx";
         copyResourceToTemp("test.xlsx", fileName2);
         expectedLines = getExcelResourceLines("test.xlsx");
         response = target().path("delimited-files/" + fileName2).request().get();
-        assertEquals(response.getStatus(), 200);
+        assertEquals(200, response.getStatus());
         testResultsRows(response, expectedLines, 10);
     }
 
     @Test
     public void getRowsFromExcelWithFormulasTest() throws Exception {
-        String fileName1 = UUID.randomUUID().toString() + ".xls";
+        String fileName1 = UUID.randomUUID() + ".xls";
         copyResourceToTemp("formulaData.xls", fileName1);
         List<String> expectedLines = getExcelResourceLines("formulaData.xls");
         Response response = target().path("delimited-files/" + fileName1).request().get();
-        assertEquals(response.getStatus(), 200);
+        assertEquals(200, response.getStatus());
         testResultsRows(response, expectedLines, 9);
 
-        String fileName2 = UUID.randomUUID().toString() + ".xlsx";
+        String fileName2 = UUID.randomUUID() + ".xlsx";
         copyResourceToTemp("formulaData.xlsx", fileName2);
         expectedLines = getExcelResourceLines("formulaData.xlsx");
         response = target().path("delimited-files/" + fileName2).request().get();
-        assertEquals(response.getStatus(), 200);
+        assertEquals(200, response.getStatus());
         testResultsRows(response, expectedLines, 9);
     }
 
@@ -315,18 +317,18 @@ public class DelimitedRestTest extends MobiRestTestCXF {
     public void getRowsFromExcelWithParamsTest() throws Exception {
         int rowNum = 5;
 
-        String fileName1 = UUID.randomUUID().toString() + ".xls";
+        String fileName1 = UUID.randomUUID() + ".xls";
         copyResourceToTemp("test.xls", fileName1);
         List<String> expectedLines = getExcelResourceLines("test.xls");
         Response response = target().path("delimited-files/" + fileName1).queryParam("rowCount", rowNum).request().get();
-        assertEquals(response.getStatus(), 200);
+        assertEquals(200, response.getStatus());
         testResultsRows(response, expectedLines, rowNum);
 
-        String fileName2 = UUID.randomUUID().toString() + ".xlsx";
+        String fileName2 = UUID.randomUUID() + ".xlsx";
         copyResourceToTemp("test.xlsx", fileName2);
         expectedLines = getExcelResourceLines("test.xlsx");
         response = target().path("delimited-files/" + fileName2).queryParam("rowCount", rowNum).request().get();
-        assertEquals(response.getStatus(), 200);
+        assertEquals(200, response.getStatus());
         testResultsRows(response, expectedLines, rowNum);
     }
 
@@ -335,33 +337,33 @@ public class DelimitedRestTest extends MobiRestTestCXF {
         String mapping = "";
         Response response = target().path("delimited-files/test.csv/map").queryParam("mappingIRI", mapping)
                 .request().get();
-        assertEquals(response.getStatus(), 400);
+        assertEquals(400, response.getStatus());
 
         response = target().path("delimited-files/test.csv/map").request().get();
-        assertEquals(response.getStatus(), 400);
+        assertEquals(400, response.getStatus());
     }
 
     @Test
     public void mapWithNonExistentMappingTest() throws Exception {
-        String fileName = UUID.randomUUID().toString() + ".csv";
+        String fileName = UUID.randomUUID() + ".csv";
         copyResourceToTemp("test.csv", fileName);
         Response response = target().path("delimited-files/" + fileName + "/map").queryParam("mappingIRI", ERROR_IRI)
                 .request().get();
-        assertEquals(response.getStatus(), 400);
+        assertEquals(400, response.getStatus());
     }
 
     @Test
     public void mapWithMalformedMappingIRITest() throws Exception {
-        String fileName = UUID.randomUUID().toString() + ".csv";
+        String fileName = UUID.randomUUID() + ".csv";
         copyResourceToTemp("test.csv", fileName);
         Response response = target().path("delimited-files/" + fileName + "/map").queryParam("mappingIRI", "error")
                 .request().get();
-        assertEquals(response.getStatus(), 400);
+        assertEquals(400, response.getStatus());
     }
 
     @Test
     public void mapCsvWithDefaultsTest() throws Exception {
-        String fileName = UUID.randomUUID().toString() + ".csv";
+        String fileName = UUID.randomUUID() + ".csv";
         copyResourceToTemp("test.csv", fileName);
         Response response = testMapDownload(fileName, MAPPING_RECORD_IRI, null);
         isJsonld(response.readEntity(String.class));
@@ -376,7 +378,7 @@ public class DelimitedRestTest extends MobiRestTestCXF {
         params.put("containsHeaders", true);
         params.put("separator", "\t");
         params.put("fileName", "test");
-        String fileName = UUID.randomUUID().toString() + ".csv";
+        String fileName = UUID.randomUUID() + ".csv";
         copyResourceToTemp("test_tabs.csv", fileName);
 
         Response response = testMapDownload(fileName, MAPPING_RECORD_IRI, params);
@@ -387,7 +389,7 @@ public class DelimitedRestTest extends MobiRestTestCXF {
 
     @Test
     public void mapExcelWithDefaultsTest() throws Exception {
-        String fileName = UUID.randomUUID().toString() + ".xls";
+        String fileName = UUID.randomUUID() + ".xls";
         copyResourceToTemp("test.xls", fileName);
 
         Response response = testMapDownload(fileName, MAPPING_RECORD_IRI, null);
@@ -402,7 +404,7 @@ public class DelimitedRestTest extends MobiRestTestCXF {
         params.put("format", "turtle");
         params.put("containsHeaders", true);
         params.put("fileName", "test");
-        String fileName = UUID.randomUUID().toString() + ".xls";
+        String fileName = UUID.randomUUID() + ".xls";
         copyResourceToTemp("test.xls", fileName);
 
         Response response = testMapDownload(fileName, MAPPING_RECORD_IRI, params);
@@ -415,20 +417,21 @@ public class DelimitedRestTest extends MobiRestTestCXF {
     public void mapNonexistentDelimitedTest() {
         Response response = target().path("delimited-files/error/map").queryParam("mappingIRI", MAPPING_RECORD_IRI)
                 .request().get();
-        assertEquals(response.getStatus(), 400);
+        assertEquals(400, response.getStatus());
     }
 
     @Test
     public void mapDeletesFile() throws Exception {
         Map<String, Object> params = new HashMap<>();
         params.put("containsHeaders", true);
-        String fileName = UUID.randomUUID().toString() + ".xls";
+        String fileName = UUID.randomUUID() + ".xls";
         copyResourceToTemp("test.xls", fileName);
 
-        assertTrue(Files.exists(Paths.get(DelimitedRest.TEMP_DIR + "/" + fileName)));
+        Path path = Paths.get(DelimitedRest.TEMP_DIR + "/" + fileName);
+        assertTrue(Files.exists(path));
 
         testMapDownload(fileName, MAPPING_RECORD_IRI, params);
-        assertFalse(Files.exists(Paths.get(DelimitedRest.TEMP_DIR + "/" + fileName)));
+        assertFalse(Files.exists(path));
     }
 
     @Test
@@ -438,15 +441,15 @@ public class DelimitedRestTest extends MobiRestTestCXF {
         fd.field("jsonld", mapping);
         Response response = target().path("delimited-files/test.csv/map-preview").request().post(Entity.entity(fd.body(),
                 MediaType.MULTIPART_FORM_DATA));
-        assertEquals(response.getStatus(), 400);
+        assertEquals(400, response.getStatus());
 
         response = target().path("delimited-files/test.csv/map-preview").request().post(Entity.entity(FormDataMultiPart.emptyBody(), MediaType.MULTIPART_FORM_DATA));
-        assertEquals(response.getStatus(), 400);
+        assertEquals(400, response.getStatus());
     }
 
     @Test
     public void mapPreviewCsvWithDefaultsTest() throws Exception {
-        String fileName = UUID.randomUUID().toString() + ".csv";
+        String fileName = UUID.randomUUID() + ".csv";
         copyResourceToTemp("test.csv", fileName);
         Response response = testMapPreview(fileName, "[]", null);
         isJsonld(response.readEntity(String.class));
@@ -458,7 +461,7 @@ public class DelimitedRestTest extends MobiRestTestCXF {
         params.put("format", "turtle");
         params.put("containsHeaders", true);
         params.put("separator", "\t");
-        String fileName = UUID.randomUUID().toString() + ".csv";
+        String fileName = UUID.randomUUID() + ".csv";
         copyResourceToTemp("test_tabs.csv", fileName);
 
         Response response = testMapPreview(fileName, "[]", params);
@@ -467,7 +470,7 @@ public class DelimitedRestTest extends MobiRestTestCXF {
 
     @Test
     public void mapPreviewExcelWithDefaultsTest() throws Exception {
-        String fileName = UUID.randomUUID().toString() + ".xls";
+        String fileName = UUID.randomUUID() + ".xls";
         copyResourceToTemp("test.xls", fileName);
 
         Response response = testMapPreview(fileName, "[]", null);
@@ -479,7 +482,7 @@ public class DelimitedRestTest extends MobiRestTestCXF {
         Map<String, Object> params = new HashMap<>();
         params.put("format", "turtle");
         params.put("containsHeaders", true);
-        String fileName = UUID.randomUUID().toString() + ".xls";
+        String fileName = UUID.randomUUID() + ".xls";
         copyResourceToTemp("test.xls", fileName);
 
         Response response = testMapPreview(fileName, "[]", params);
@@ -492,70 +495,70 @@ public class DelimitedRestTest extends MobiRestTestCXF {
         fd.field("jsonld", "[]");
         Response response = target().path("delimited-files/error/map-preview").request().post(Entity.entity(fd.body(),
                 MediaType.MULTIPART_FORM_DATA));
-        assertEquals(response.getStatus(), 400);
+        assertEquals(400, response.getStatus());
     }
 
     @Test
     public void mapIntoDatasetWithoutMappingTest() {
         Response response = target().path("delimited-files/test.csv/map").queryParam("mappingRecordIRI", "")
                 .queryParam("datasetRecordIRI", DATASET_RECORD_IRI).request().post(Entity.json(""));
-        assertEquals(response.getStatus(), 400);
+        assertEquals(400, response.getStatus());
 
         response = target().path("delimited-files/test.csv/map").queryParam("datasetRecordIRI", DATASET_RECORD_IRI)
                 .request().post(Entity.json(""));
-        assertEquals(response.getStatus(), 400);
+        assertEquals(400, response.getStatus());
     }
 
     @Test
     public void mapIntoDatasetWithoutDatasetTest() {
         Response response = target().path("delimited-files/test.csv/map").queryParam("mappingRecordIRI", MAPPING_RECORD_IRI)
                 .queryParam("datasetRecordIRI", "").request().post(Entity.json(""));
-        assertEquals(response.getStatus(), 400);
+        assertEquals(400, response.getStatus());
 
         response = target().path("delimited-files/test.csv/map").queryParam("mappingRecordIRI", MAPPING_RECORD_IRI)
                 .request().post(Entity.json(""));
-        assertEquals(response.getStatus(), 400);
+        assertEquals(400, response.getStatus());
     }
 
     @Test
     public void mapIntoNonexistentDatasetTest() {
         Response response = target().path("delimited-files/test.csv/map").queryParam("mappingRecordIRI", MAPPING_RECORD_IRI)
                 .queryParam("datasetRecordIRI", ERROR_IRI).request().post(Entity.json(""));
-        assertEquals(response.getStatus(), 400);
+        assertEquals(400, response.getStatus());
     }
 
     @Test
     public void mapIntoDatasetWithNonexistentMappingTest() throws Exception {
         // Setup:
-        String fileName = UUID.randomUUID().toString() + ".csv";
+        String fileName = UUID.randomUUID() + ".csv";
         copyResourceToTemp("test.csv", fileName);
 
         Response response = target().path("delimited-files/" + fileName + "/map").queryParam("mappingRecordIRI", ERROR_IRI)
                 .queryParam("datasetRecordIRI", DATASET_RECORD_IRI).request().post(Entity.json(""));
-        assertEquals(response.getStatus(), 400);
+        assertEquals(400, response.getStatus());
     }
 
     @Test
     public void mapIntoDatasetWithMalformedMappingIRITest() throws Exception {
         // Setup:
-        String fileName = UUID.randomUUID().toString() + ".csv";
+        String fileName = UUID.randomUUID() + ".csv";
         copyResourceToTemp("test.csv", fileName);
 
         Response response = target().path("delimited-files/" + fileName + "/map").queryParam("mappingRecordIRI", "error")
                 .queryParam("datasetRecordIRI", DATASET_RECORD_IRI).request().post(Entity.json(""));
-        assertEquals(response.getStatus(), 400);
+        assertEquals(400, response.getStatus());
     }
 
     @Test
     public void mapIntoDatasetWithDatasetOrRepoIssue() throws Exception {
         // Setup:
         doThrow(new IllegalArgumentException("Dataset does not exist")).when(rdfImportService).importModel(any(), any());
-        String fileName = UUID.randomUUID().toString() + ".csv";
+        String fileName = UUID.randomUUID() + ".csv";
         copyResourceToTemp("test.csv", fileName);
 
         Response response = target().path("delimited-files/" + fileName + "/map").queryParam("mappingRecordIRI", MAPPING_RECORD_IRI)
                 .queryParam("datasetRecordIRI", DATASET_RECORD_IRI).request().post(Entity.json(""));
-        assertEquals(response.getStatus(), 400);
+        assertEquals(400, response.getStatus());
     }
 
     @Test
@@ -563,14 +566,14 @@ public class DelimitedRestTest extends MobiRestTestCXF {
         // Setup:
         Statement data = vf.createStatement(vf.createIRI("http://test.org/class"), vf.createIRI("http://test.org/property"), vf.createLiteral(true));
         Model model = mf.createEmptyModel();
-        model.addAll(Collections.singleton(data));
+        model.add(data);
         when(converter.convert(any(SVConfig.class))).thenReturn(model);
-        String fileName = UUID.randomUUID().toString() + ".csv";
+        String fileName = UUID.randomUUID() + ".csv";
         copyResourceToTemp("test.csv", fileName);
 
         Response response = target().path("delimited-files/" + fileName + "/map").queryParam("mappingRecordIRI", MAPPING_RECORD_IRI)
                 .queryParam("datasetRecordIRI", DATASET_RECORD_IRI).request().post(Entity.json(""));
-        assertEquals(response.getStatus(), 200);
+        assertEquals(200, response.getStatus());
     }
 
     @Test
@@ -578,77 +581,77 @@ public class DelimitedRestTest extends MobiRestTestCXF {
         // Setup:
         Statement data = vf.createStatement(vf.createIRI("http://test.org/class"), vf.createIRI("http://test.org/property"), vf.createLiteral(true));
         Model model = mf.createEmptyModel();
-        model.addAll(Collections.singleton(data));
+        model.add(data);
         when(converter.convert(any(ExcelConfig.class))).thenReturn(model);
-        String fileName = UUID.randomUUID().toString() + ".xls";
+        String fileName = UUID.randomUUID() + ".xls";
         copyResourceToTemp("test.xls", fileName);
 
         Response response = target().path("delimited-files/" + fileName + "/map").queryParam("mappingRecordIRI", MAPPING_RECORD_IRI)
                 .queryParam("datasetRecordIRI", DATASET_RECORD_IRI).request().post(Entity.json(""));
-        assertEquals(response.getStatus(), 200);
+        assertEquals(200, response.getStatus());
     }
 
     @Test
     public void mapIntoOntologyRecordWithoutMappingTest() {
         Response response = target().path("delimited-files/test.csv/map-to-ontology").queryParam("mappingRecordIRI", "")
                 .queryParam("ontologyRecordIRI", ONTOLOGY_RECORD_IRI).request().post(Entity.json(""));
-        assertEquals(response.getStatus(), 400);
+        assertEquals(400, response.getStatus());
 
         response = target().path("delimited-files/test.csv/map-to-ontology").queryParam("ontologyRecordIRI", ONTOLOGY_RECORD_IRI)
                .request().post(Entity.json(""));
-        assertEquals(response.getStatus(), 400);
+        assertEquals(400, response.getStatus());
     }
 
     @Test
     public void mapIntoOntologyRecordWithoutOntologyTest() {
         Response response = target().path("delimited-files/test.csv/map-to-ontology").queryParam("mappingRecordIRI", MAPPING_RECORD_IRI)
                 .queryParam("ontologyRecordIRI", "").request().post(Entity.json(""));
-        assertEquals(response.getStatus(), 400);
+        assertEquals(400, response.getStatus());
 
         response = target().path("delimited-files/test.csv/map-to-ontology").queryParam("mappingRecordIRI", MAPPING_RECORD_IRI)
                 .request().post(Entity.json(""));
-        assertEquals(response.getStatus(), 400);
+        assertEquals(400, response.getStatus());
     }
 
     @Test
     public void mapIntoNonexistentOntologyRecordTest() {
         Response response = target().path("delimited-files/test.csv/map-to-ontology").queryParam("mappingRecordIRI", MAPPING_RECORD_IRI)
                 .queryParam("ontologyRecordIRI", ERROR_IRI).request().post(Entity.json(""));
-        assertEquals(response.getStatus(), 400);
+        assertEquals(400, response.getStatus());
     }
 
     @Test
     public void mapIntoOntologyRecordWithNonexistentMappingTest() throws Exception {
         // Setup:
-        String fileName = UUID.randomUUID().toString() + ".csv";
+        String fileName = UUID.randomUUID() + ".csv";
         copyResourceToTemp("test.csv", fileName);
 
         Response response = target().path("delimited-files/" + fileName + "/map-to-ontology").queryParam("mappingRecordIRI", ERROR_IRI)
                 .queryParam("ontologyRecordIRI", ONTOLOGY_RECORD_IRI).request().post(Entity.json(""));
-        assertEquals(response.getStatus(), 400);
+        assertEquals(400, response.getStatus());
     }
 
     @Test
     public void mapIntoOntologyRecordWithMalformedMappingIRITest() throws Exception {
         // Setup:
-        String fileName = UUID.randomUUID().toString() + ".csv";
+        String fileName = UUID.randomUUID() + ".csv";
         copyResourceToTemp("test.csv", fileName);
 
         Response response = target().path("delimited-files/" + fileName + "/map-to-ontology").queryParam("mappingRecordIRI", "error")
                 .queryParam("ontologyRecordIRI", ONTOLOGY_RECORD_IRI).request().post(Entity.json(""));
-        assertEquals(response.getStatus(), 400);
+        assertEquals(400, response.getStatus());
     }
 
     @Test
     public void mapIntoOntologyRecordThatHasNoMasterBranchSetTest() throws Exception {
         // Setup:
         when(ontologyRecord.getMasterBranch_resource()).thenReturn(Optional.empty());
-        String fileName = UUID.randomUUID().toString() + ".csv";
+        String fileName = UUID.randomUUID() + ".csv";
         copyResourceToTemp("test.csv", fileName);
 
         Response response = target().path("delimited-files/" + fileName + "/map-to-ontology").queryParam("mappingRecordIRI", MAPPING_RECORD_IRI)
                 .queryParam("ontologyRecordIRI", ONTOLOGY_RECORD_IRI).request().post(Entity.json(""));
-        assertEquals(response.getStatus(), 400);
+        assertEquals(400, response.getStatus());
     }
 
     @Test
@@ -658,20 +661,20 @@ public class DelimitedRestTest extends MobiRestTestCXF {
         Statement statement2 = vf.createStatement(vf.createIRI("http://test.org/ontology-record-2"), vf.createIRI("http://test.org/property"), vf.createLiteral(true));
 
         Model model = mf.createEmptyModel();
-        model.addAll(Stream.of(statement1, statement2).collect(Collectors.toList()));
+        model.addAll(Stream.of(statement1, statement2).toList());
         Model committedModel = mf.createEmptyModel();
-        committedModel.addAll(Collections.singleton(statement2));
+        committedModel.add(statement2);
         when(converter.convert(any(SVConfig.class))).thenReturn(model);
         when(ontologyImportService.importOntology(eq(vf.createIRI(ONTOLOGY_RECORD_IRI)),
                 eq(vf.createIRI(ONTOLOGY_RECORD_BRANCH_IRI)), eq(false), eq(model), eq(user), anyString()))
                 .thenReturn(new Difference.Builder().additions(committedModel).build());
-        String fileName = UUID.randomUUID().toString() + ".csv";
+        String fileName = UUID.randomUUID() + ".csv";
         copyResourceToTemp("test.csv", fileName);
 
         Response response = target().path("delimited-files/" + fileName + "/map-to-ontology").queryParam("mappingRecordIRI", MAPPING_RECORD_IRI)
                 .queryParam("ontologyRecordIRI", ONTOLOGY_RECORD_IRI).queryParam("branchIRI", ONTOLOGY_RECORD_BRANCH_IRI)
                 .request().post(Entity.json(""));
-        assertEquals(response.getStatus(), 200);
+        assertEquals(200, response.getStatus());
     }
 
     @Test
@@ -681,7 +684,7 @@ public class DelimitedRestTest extends MobiRestTestCXF {
         Statement statement2 = vf.createStatement(vf.createIRI("http://test.org/ontology-record-2"), vf.createIRI("http://test.org/property"), vf.createLiteral(true));
 
         Model model = mf.createEmptyModel();
-        model.addAll(Stream.of(statement1, statement2).collect(Collectors.toList()));
+        model.addAll(Stream.of(statement1, statement2).toList());
         when(converter.convert(any(SVConfig.class))).thenReturn(model);
         when(ontologyImportService.importOntology(eq(vf.createIRI(ONTOLOGY_RECORD_IRI)),
                 eq(vf.createIRI(ONTOLOGY_RECORD_BRANCH_IRI)), eq(false), eq(model), eq(user), anyString()))
@@ -689,13 +692,13 @@ public class DelimitedRestTest extends MobiRestTestCXF {
                         .additions(mf.createEmptyModel())
                         .deletions(mf.createEmptyModel())
                         .build());
-        String fileName = UUID.randomUUID().toString() + ".csv";
+        String fileName = UUID.randomUUID() + ".csv";
         copyResourceToTemp("test.csv", fileName);
 
         Response response = target().path("delimited-files/" + fileName + "/map-to-ontology").queryParam("mappingRecordIRI", MAPPING_RECORD_IRI)
                 .queryParam("ontologyRecordIRI", ONTOLOGY_RECORD_IRI).queryParam("branchIRI", ONTOLOGY_RECORD_BRANCH_IRI)
                 .request().post(Entity.json(""));
-        assertEquals(response.getStatus(), 204);
+        assertEquals(204, response.getStatus());
     }
 
     @Test
@@ -705,25 +708,25 @@ public class DelimitedRestTest extends MobiRestTestCXF {
         Statement statement2 = vf.createStatement(vf.createIRI("http://test.org/ontology-record-2"), vf.createIRI("http://test.org/property"), vf.createLiteral(true));
 
         Model model = mf.createEmptyModel();
-        model.addAll(Stream.of(statement1, statement2).collect(Collectors.toList()));
+        model.addAll(Stream.of(statement1, statement2).toList());
         Model committedModel = mf.createEmptyModel();
-        committedModel.addAll(Collections.singleton(statement2));
+        committedModel.add(statement2);
         when(converter.convert(any(ExcelConfig.class))).thenReturn(model);
         when(ontologyImportService.importOntology(eq(vf.createIRI(ONTOLOGY_RECORD_IRI)),
                 eq(vf.createIRI(MASTER_BRANCH_IRI)), eq(false), eq(model), eq(user), anyString()))
                 .thenReturn(new Difference.Builder().additions(committedModel).build());
-        String fileName = UUID.randomUUID().toString() + ".xls";
+        String fileName = UUID.randomUUID() + ".xls";
         copyResourceToTemp("test.xls", fileName);
 
         Response response = target().path("delimited-files/" + fileName + "/map-to-ontology").queryParam("mappingRecordIRI", MAPPING_RECORD_IRI)
                 .queryParam("ontologyRecordIRI", ONTOLOGY_RECORD_IRI).queryParam("branchIRI", MASTER_BRANCH_IRI)
                 .request().post(Entity.json(""));
-        assertEquals(response.getStatus(), 200);
+        assertEquals(200, response.getStatus());
     }
 
     private void isJsonld(String str) {
         try {
-            JSONArray result = JSONArray.fromObject(str);
+            ArrayNode result = mapper.readValue(str, ArrayNode.class);
         } catch (Exception e) {
             fail("Expected no exception, but got: " + e.getMessage());
         }
@@ -731,7 +734,7 @@ public class DelimitedRestTest extends MobiRestTestCXF {
 
     private void isNotJsonld(String str) {
         try {
-            JSONArray result = JSONArray.fromObject(str);
+            ArrayNode result = mapper.readValue(str, ArrayNode.class);
             fail();
         } catch (Exception e) {
             System.out.println("Format is not JSON-LD, as expected");
@@ -748,7 +751,7 @@ public class DelimitedRestTest extends MobiRestTestCXF {
             }
         }
         Response response = wt.request().post(Entity.entity(fd.body(), MediaType.MULTIPART_FORM_DATA));
-        assertEquals(response.getStatus(), 200);
+        assertEquals(200, response.getStatus());
         return response;
     }
 
@@ -760,44 +763,44 @@ public class DelimitedRestTest extends MobiRestTestCXF {
             }
         }
         Response response = wt.request().get();
-        assertEquals(response.getStatus(), 200);
+        assertEquals(200, response.getStatus());
         return response;
     }
 
-    private void testResultsRows(Response response, List<String> expectedLines, int rowNum) {
+    private void testResultsRows(Response response, List<String> expectedLines, int rowNum) throws Exception {
         String body = response.readEntity(String.class);
-        JSONArray lines = JSONArray.fromObject(body);
-        assertEquals(lines.size(), rowNum + 1);
+        ArrayNode lines = mapper.readValue(body, ArrayNode.class);
+        assertEquals(rowNum + 1, lines.size());
         for (int i = 0; i < lines.size(); i++) {
-            JSONArray line = lines.getJSONArray(i);
+            JsonNode line = lines.get(i);
             String expectedLine = expectedLines.get(i);
-            for (Object item : line) {
-                assertTrue(expectedLine.contains(item.toString()));
+            for (JsonNode item : line) {
+                assertTrue(expectedLine.contains(item.asText()));
             }
         }
     }
 
     private List<String> getCsvResourceLines(String fileName) throws Exception {
-        return IOUtils.readLines(getClass().getClassLoader().getResourceAsStream(fileName), StandardCharsets.UTF_8);
+        return IOUtils.readLines(Objects.requireNonNull(getClass().getClassLoader().getResourceAsStream(fileName)), StandardCharsets.UTF_8);
     }
 
     private List<String> getExcelResourceLines(String fileName) {
         List<String> expectedLines = new ArrayList<>();
         try {
-            Workbook wb = WorkbookFactory.create(getClass().getResourceAsStream("/" + fileName));
+            Workbook wb = WorkbookFactory.create(Objects.requireNonNull(getClass().getResourceAsStream("/" + fileName)));
             FormulaEvaluator evaluator = wb.getCreationHelper().createFormulaEvaluator();
             Sheet sheet = wb.getSheetAt(0);
             DataFormatter df = new DataFormatter();
             int index = 0;
             for (Row row : sheet) {
-                String rowStr = "";
+                StringBuilder rowStr = new StringBuilder();
                 for (Cell cell : row) {
-                    rowStr += df.formatCellValue(cell, evaluator);
+                    rowStr.append(df.formatCellValue(cell, evaluator));
                 }
-                expectedLines.add(index, rowStr);
+                expectedLines.add(index, rowStr.toString());
                 index++;
             }
-        } catch (IOException | InvalidFormatException e) {
+        } catch (IOException e) {
             e.printStackTrace();
         }
         return expectedLines;
@@ -811,7 +814,7 @@ public class DelimitedRestTest extends MobiRestTestCXF {
     }
 
     private void copyResourceToTemp(String resourceName, String newName) throws IOException {
-        Files.copy(getClass().getResourceAsStream("/" + resourceName),
+        Files.copy(Objects.requireNonNull(getClass().getResourceAsStream("/" + resourceName)),
                 Paths.get(DelimitedRest.TEMP_DIR + "/" + newName), StandardCopyOption.REPLACE_EXISTING);
     }
 }
